[ 2.2.2 Alpha ]
• Updated the UpdateArcade screen, text shouldn't go off screen now, thats good. sorry 2.2.1-alpah users.

[ Next Update Goals ]
• Shop
• More Customizability for Mods to mess around with
• XP Milestones
• More ways to get LJ Tokens
• Button to add YCE Mods (?)

PLEASE REPORT ANY ISSUES TO THE GITHUB!