@@ -1,2 +1,2 @@
-2.2.1-alpha
+2.2.2-alpha
 LJ-s-Arcade-Mod.ycemod
